update swager doc
