# go/real-world-api/docs/swagger.json
@@ -8,6 +8,66 @@
     },
     "basePath": "/api",
     "paths": {
+        "/user": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authentication header",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "answer",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.UserSchema"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/{username}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "answer",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ProfileSchema"
+                        }
+                    }
+                }
+            }
+        },
         "/users/login": {
             "post": {
                 "consumes": [
@@ -35,7 +95,7 @@
                     "200": {
                         "description": "answer",
                         "schema": {
-                            "$ref": "#/definitions/handlers.UserSchema"
+                            "$ref": "#/definitions/handlers.UserWithTokenSchema"
                         }
                     }
                 }
@@ -67,7 +127,7 @@
                     "200": {
                         "description": "answer",
                         "schema": {
-                            "$ref": "#/definitions/handlers.UserSchema"
+                            "$ref": "#/definitions/handlers.UserWithTokenSchema"
                         }
                     }
                 }
@@ -90,6 +150,23 @@
                             "example": "jojojojo"
                         }
                     }
+                }
+            }
+        },
+        "handlers.ProfileSchema": {
+            "type": "object",
+            "properties": {
+                "bio": {
+                    "type": "string"
+                },
+                "following": {
+                    "type": "boolean"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
@@ -121,6 +198,23 @@
             }
         },
         "handlers.UserSchema": {
+            "type": "object",
+            "properties": {
+                "bio": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.UserWithTokenSchema": {
             "type": "object",
             "properties": {
                 "bio": {
